Fix navbar arrow

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -6643,6 +6643,8 @@ a.navbar-item:hover, a.navbar-item.is-active,
 
 .navbar-link::after {
   border-color: #3273dc;
+  margin-top: -0.375em;
+  right: 1.125em;
 }
 
 .navbar-dropdown {
@@ -6782,9 +6784,6 @@ a.navbar-item:hover, a.navbar-item.is-active,
     opacity: 1;
     pointer-events: auto;
     transform: translateY(0);
-  }
-  .navbar-link::after {
-    right: 1.125em;
   }
   .navbar-menu {
     flex-grow: 1;
