--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -200,6 +200,8 @@ a.navbar-item,
   padding-right: 2.5em
   &::after
     +arrow($navbar-dropdown-arrow)
+    margin-top: -0.375em
+    right: 1.125em
 
 .navbar-dropdown
   font-size: 0.875rem
@@ -320,9 +322,6 @@ a.navbar-item,
           opacity: 1
           pointer-events: auto
           transform: translateY(0)
-  .navbar-link
-    &::after
-      right: 1.125em
   .navbar-menu
     flex-grow: 1
     flex-shrink: 0
