Fix fixed spaced navbar

--- a/docs/_includes/elements/patreon.html
+++ b/docs/_includes/elements/patreon.html
@@ -1,3 +1,10 @@
 <a class="bd-patreon-button" href="https://www.patreon.com/jgthms" target="_blank">
-  <img src="{{ site.url }}/images/become-a-patron.png" alt="Become a patron" width="148" height="36">
+  {%
+    include elements/responsive-image.html
+    path="become-a-patron"
+    extension="png"
+    alt="Become a Patron"
+    width="148"
+    height="36"
+  %}
 </a>
