--- a/docs/_sass/global.sass
+++ b/docs/_sass/global.sass
@@ -3,8 +3,19 @@ svg
   max-width: 100%
 
 .bd-patreon-button
+  display: inline-block
+  position: relative
+  vertical-align: top
   img
     border-radius: $radius
+    display: block
+  &:hover
+    &::after
+      +overlay
+      background-color: rgba(#000, 0.05)
+      border-radius: $radius
+      content: ""
+      display: block
 
 $carbon-spacing: 1rem
 $carbon-shadow-size: 0.75rem
