--- a/docs/_includes/components/categories.html
+++ b/docs/_includes/components/categories.html
@@ -11,7 +11,7 @@
             <i class="fas fa-chevron-down"></i>
           </span>
         </a>
-        <a class="bd-category-name" href="{{ site.url }}{{ category_link.path }}">
+        <a class="bd-category-name {% if category_id == current_link_id %}is-active{% endif %}" href="{{ site.url }}{{ category_link.path }}">
           <strong>{{ category_link.name }}</strong>
         </a>
       </header>
