--- a/docs/_includes/elements/tws.html
+++ b/docs/_includes/elements/tws.html
@@ -13,7 +13,14 @@
     </div>
 
     <div class="column is-4">
-      {% assign tweet = site.data.love.tweets_by_id.915580081938018304 %}{% include elements/tw.html tweet=tweet%}
+      {% assign tweet = site.data.love.tweets_by_id.915580081938018304 %}
+      {% include
+        elements/tw.html
+        tweet=tweet
+        drawing_id='love-letters'
+        drawing_width=240
+        drawing_height=120
+      %}
       {% assign tweet = site.data.love.tweets_by_id.903629781744439297 %}{% include elements/tw.html tweet=tweet%}
       {% assign tweet = site.data.love.tweets_by_id.909653512010833920 %}{% include elements/tw.html tweet=tweet%}
     </div>
