--- a/docs/_includes/index/columns.html
+++ b/docs/_includes/index/columns.html
@@ -97,13 +97,14 @@
 
     <div class="bd-columns-tools">
       <div class="bd-columns-tool bd-is-try">
-        <div class="buttons">
+        <div class="buttons bd-has-drawing">
           <a id="add" class="button is-large is-link is-unselectable">
             <strong>Add column</strong>
           </a>
           <a id="remove" class="button is-large is-light is-unselectable">
             <strong>Remove</strong>
           </a>
+          {% include elements/drawing.html id='try-it-out' width=150 height=65 %}
         </div>
       </div>
 
