--- a/docs/_includes/index/customize.html
+++ b/docs/_includes/index/customize.html
@@ -15,8 +15,9 @@
 
     <div class="columns">
       <div class="column is-6">
-        <div class="highlight-full">
+        <div class="highlight-full bd-has-drawing">
           {% highlight scss %}{% include snippets/customized.html %}{% endhighlight %}
+          {% include elements/drawing.html id='customize' width=152 height=76 %}
         </div>
       </div>
 
