--- a/docs/_includes/index/modifiers.html
+++ b/docs/_includes/index/modifiers.html
@@ -16,7 +16,14 @@
         </header>
 
         {% assign tweet = site.data.love.tweets_by_id.868829487072464897 %}
-        {% include elements/tw.html tweet=tweet modifier='bd-is-grey' %}
+        {% include
+          elements/tw.html
+          tweet=tweet
+          modifier='bd-is-grey'
+          drawing_id='crazy'
+          drawing_width=108
+          drawing_height=48
+        %}
       </div>
 
       <div class="column">
