--- a/docs/_includes/index/start.html
+++ b/docs/_includes/index/start.html
@@ -5,8 +5,9 @@
   <div class="container">
     <header class="bd-index-header">
       <h3 class="title is-3">
-        <a href="{{ docs_url }}">
+        <a class="bd-has-drawing" href="{{ docs_url }}">
           And so <strong>much more</strong>
+          {% include elements/drawing.html id='join-us' width=86 height=86 %}
         </a>
       </h3>
       <h4 class="subtitle is-4">
