--- a/docs/_sass/main.sass
+++ b/docs/_sass/main.sass
@@ -124,6 +124,8 @@
 .bd-category-name
   color: $text-strong
   position: relative
+  &.is-active
+    color: $link
 
 .bd-category-list
   @extend %bd-list
