--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -9772,6 +9772,10 @@ label.panel-block:hover {
   position: relative;
 }
 
+.bd-category-name.is-active {
+  color: #3273dc;
+}
+
 .bd-category-list {
   display: none;
   padding: 0.5rem;
@@ -11105,6 +11109,57 @@ svg {
 ::selection {
   background-color: #00d1b2;
   color: #fff;
+}
+
+.bd-has-drawing {
+  position: relative;
+}
+
+.bd-drawing {
+  display: none;
+  pointer-events: none;
+  position: absolute;
+}
+
+.bd-drawing.bd-is-try-it-out {
+  bottom: 100%;
+  right: 100%;
+}
+
+.bd-drawing.bd-is-love-letters {
+  bottom: 110%;
+  right: 10%;
+}
+
+.bd-drawing.bd-is-crazy {
+  left: -10%;
+  top: 110%;
+}
+
+.bd-drawing.bd-is-customize {
+  right: -10%;
+  top: 105%;
+}
+
+.bd-drawing.bd-is-opinion-free {
+  right: 100%;
+  top: 110%;
+}
+
+.bd-drawing.bd-is-join-us {
+  bottom: 80%;
+  left: 100%;
+}
+
+.bd-drawing.bd-is-spam-free {
+  bottom: 100%;
+  right: 90%;
+}
+
+@media screen and (min-width: 769px), print {
+  .bd-drawing {
+    display: inline;
+  }
 }
 
 .bd-links {
