--- a/docs/_includes/index/js.html
+++ b/docs/_includes/index/js.html
@@ -20,7 +20,14 @@
       <div class="column">
         <div class="bd-index-js-tweet">
           {% assign tweet = site.data.love.tweets_by_id.860885116909998080 %}
-          {% include elements/tw.html tweet=tweet modifier='bd-is-grey' %}
+          {% include
+            elements/tw.html
+            tweet=tweet
+            modifier='bd-is-grey'
+            drawing_id='opinion-free'
+            drawing_width=152
+            drawing_height=52
+          %}
         </div>
       </div>
     </div>
