--- a/docs/_includes/index/focus.html
+++ b/docs/_includes/index/focus.html
@@ -10,13 +10,13 @@
       </p>
       <p class="subtitle is-6">Designed for <strong>mobile</strong> first</p>
       <figure class="bd-focus-icon">
-        <span class="icon is-large">
+        <span class="bd-focus-mobile icon is-large">
           <i class="fas fa-lg fa-mobile-alt"></i>
         </span>
-        <span class="icon is-large">
+        <span class="bd-focus-tablet icon is-large">
           <i class="fas fa-2x fa-tablet-alt"></i>
         </span>
-        <span class="icon is-large">
+        <span class="bd-focus-desktop icon is-large">
           <i class="fas fa-3x fa-desktop"></i>
         </span>
       </figure>
@@ -29,9 +29,15 @@
       <p class="subtitle is-6">
         Just import what you <strong>need</strong>
       </p>
-      <figure class="bd-focus-icon">
-        <span class="icon is-large">
-          <i class="fas fa-3x fa-cubes"></i>
+      <figure class="bd-focus-cubes bd-focus-icon">
+        <span class="bd-focus-cube bd-focus-cube-1 icon is-large">
+          <i class="fas fa-2x fa-cube"></i>
+        </span>
+        <span class="bd-focus-cube bd-focus-cube-2 icon is-large">
+          <i class="fas fa-2x fa-cube"></i>
+        </span>
+        <span class="bd-focus-cube bd-focus-cube-3 icon is-large">
+          <i class="fas fa-2x fa-cube"></i>
         </span>
       </figure>
     </a>
@@ -43,7 +49,7 @@
       <p class="subtitle is-6">
         Built with <strong>Flexbox</strong>
       </p>
-      <figure class="bd-focus-icon">
+      <figure class="bd-focus-css3 bd-focus-icon">
         <span class="icon is-large">
           <i class="fab fa-3x fa-css3"></i>
         </span>
@@ -57,7 +63,7 @@
       <p class="subtitle is-6">
         Open source on <strong>GitHub</strong>
       </p>
-      <figure class="bd-focus-icon">
+      <figure class="bd-focus-github bd-focus-icon">
         <span class="icon is-large">
           <i class="fab fa-3x fa-github-alt"></i>
         </span>
