--- a/docs/_sass/book.sass
+++ b/docs/_sass/book.sass
@@ -45,6 +45,7 @@ $book-beige: #FFEDD7
 
 .bd-book-content
   @extend %bd-box
+  box-shadow: 0 3rem 3rem -1rem rgba($black, 0.2)
   max-width: 520px
   padding: 3rem
 
