--- a/docs/_sass/index.sass
+++ b/docs/_sass/index.sass
@@ -156,24 +156,45 @@
     .title
       color: $link
 
-.bd-focus-icon
-  .fa-mobile-alt
-    color: $purple
-    margin-right: -20px
-  .fa-tablet-alt
-    color: $red
-    margin-left: -20px
-  .fa-desktop
-    color: $orange
-    margin-left: -20px
-    position: relative
-    top: 2px
-  .fa-cubes
-    color: $green
-  .fa-css3
-    color: $blue
-  .fa-github-alt
-    color: $github
+.bd-focus-mobile
+  color: $purple
+  margin-right: -20px
+
+.bd-focus-tablet
+  color: $red
+
+.bd-focus-desktop
+  color: $orange
+  position: relative
+  top: 2px
+
+.bd-focus-cubes
+  position: relative
+  height: 3rem
+  margin: 0 auto
+  width: 3rem
+
+.bd-focus-cube
+  color: $green
+  position: absolute
+
+.bd-focus-cube-1
+  left: 0
+  top: 0
+
+.bd-focus-cube-2
+  left: -1rem
+  top: 23px
+
+.bd-focus-cube-3
+  left: 1rem
+  top: 23px
+
+.bd-focus-css3
+  color: $blue
+
+.bd-focus-github
+  color: $github
 
 // Intro
 
