--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -36,7 +36,7 @@ $navbar-item-img-max-height: none
 %bd-box
   background-color: $white
   border-radius: $radius-large
-  box-shadow: 0 1.5rem 1.5rem -1.25rem rgba($black, 0.1)
+  box-shadow: 0 1.5rem 1.5rem -1.25rem rgba($black, 0.05)
   display: block
 
 =selection($current-selector: false)
@@ -62,7 +62,6 @@ $navbar-item-img-max-height: none
 @import "./_sass/example"
 @import "./_sass/callout"
 @import "./_sass/bsa"
-// @import "./_sass/route"
 @import "./_sass/twitter"
 @import "./_sass/expo"
 @import "./_sass/love"
@@ -72,3 +71,4 @@ $navbar-item-img-max-height: none
 @import "./_sass/sponsors"
 @import "./_sass/book"
 @import "./_sass/native"
+@import "./_sass/focus"
