--- a/docs/_includes/index/focus.html
+++ b/docs/_includes/index/focus.html
@@ -49,8 +49,8 @@
       <p class="subtitle is-6">
         Built with <strong>Flexbox</strong>
       </p>
-      <figure class="bd-focus-css3 bd-focus-icon">
-        <span class="icon is-large">
+      <figure class="bd-focus-icon">
+        <span class="bd-focus-css3 icon is-large">
           <i class="fab fa-3x fa-css3"></i>
         </span>
       </figure>
@@ -63,8 +63,8 @@
       <p class="subtitle is-6">
         Open source on <strong>GitHub</strong>
       </p>
-      <figure class="bd-focus-github bd-focus-icon">
-        <span class="icon is-large">
+      <figure class="bd-focus-icon">
+        <span class="bd-focus-github icon is-large">
           <i class="fab fa-3x fa-github-alt"></i>
         </span>
       </figure>
