Add component icons

--- a/docs/_sass/index.sass
+++ b/docs/_sass/index.sass
@@ -2,12 +2,16 @@
 
 .bd-index-header
   text-align: center
+  a,
+  strong
+    transition-duration: $speed
+    transition-property: color
   a
     color: currentColor
     &:hover
       color: $blue
       strong
-        color: currentColor
+        color: $link
   strong
     font-weight: $weight-semibold
   .title
