--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10295,6 +10295,12 @@ svg {
   text-align: center;
 }
 
+.bd-index-header a,
+.bd-index-header strong {
+  transition-duration: 86ms;
+  transition-property: color;
+}
+
 .bd-index-header a {
   color: currentColor;
 }
@@ -10304,7 +10310,7 @@ svg {
 }
 
 .bd-index-header a:hover strong {
-  color: currentColor;
+  color: #3273dc;
 }
 
 .bd-index-header strong {
