--- a/docs/documentation/components/panel.html
+++ b/docs/documentation/components/panel.html
@@ -108,6 +108,6 @@ meta:
   </p>
 </div>
 
-{% include elements/snippet.html content=panel_example size="one-third" %}
+{% include elements/snippet.html content=panel_example %}
 
 {% include elements/variables.html type='component' %}
