--- a/docs/_includes/index/tws.html
+++ b/docs/_includes/index/tws.html
@@ -9,7 +9,7 @@
       </a>
     </h3>
     <h4 class="subtitle is-4">
-      See what <strong>Bulma fans</strong> are saying
+      See what Bulma fans are saying
     </h4>
   </header>
 
