--- a/docs/_sass/twitter.sass
+++ b/docs/_sass/twitter.sass
@@ -7,8 +7,7 @@ $tw-border: #e1e8ed
   background-color: $white-bis
 
 .bd-tw
-  background-color: #fff
-  border: 2px solid $background
+  background-color: $white-bis
   border-radius: $radius-large
   color: $tw-grey
   flex-shrink: 0
@@ -16,9 +15,8 @@ $tw-border: #e1e8ed
   font-size: 16px
   max-width: 420px
   padding: 20px
-  &.bd-is-grey
-    background-color: $white-bis
-    border: none
+  &.bd-is-white
+    background-color: $white
 
 .bd-tw-header
   align-items: stretch
