Init migrating blog post

--- a/docs/_includes/elements/link.html
+++ b/docs/_includes/elements/link.html
@@ -14,4 +14,9 @@
   <p class="bd-link-subtitle">
     {{ include.subtitle }}
   </p>
+  {% if include.more %}
+    <div class="bd-link-more">
+      {{ include.more }}
+    </div>
+  {% endif %}
 </a>
