--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -77,6 +77,10 @@
   font-size: 2rem
   width: 1.5em
 
+.bd-link-more
+  font-size: 0.75em
+  opacity: 0.5
+
 +desktop
   .bd-links
     display: flex
