Fix button docs

--- a/docs/_includes/elements/link.html
+++ b/docs/_includes/elements/link.html
@@ -1,4 +1,9 @@
 <a class="bd-link" href="{{ include.url }}">
+  {% if include.surtitle %}
+    <p class="bd-link-surtitle">
+      {{ include.surtitle }}
+    </p>
+  {% endif %}
   <h2 class="bd-link-name">
     <figure class="bd-link-figure">
       {% if include.icon %}
