--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -73,7 +73,7 @@ breadcrumb:
         <div class="bd-content">
           <div class="columns">
             <div class="column is-offset-2 is-8">
-              <div class="content is-medium">
+              <div class="bd-post content is-medium">
                 {{ content }}
               </div>
             </div>
