--- a/docs/_sass/highlight.sass
+++ b/docs/_sass/highlight.sass
@@ -1,7 +1,9 @@
 .highlight
-  background-color: #f5f5f5
+  background-color: $pre-background
+  border-radius: $radius-large
   color: #586e75
   pre
+    background-color: transparent
     font-size: 0.875em
     line-height: 1.375
   .c
