--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -2655,7 +2655,7 @@ a.box:active {
 .content h5,
 .content h6 {
   color: #363636;
-  font-weight: 400;
+  font-weight: 600;
   line-height: 1.125;
 }
 
@@ -9897,11 +9897,13 @@ label.panel-block:hover {
 }
 
 .highlight {
-  background-color: #f5f5f5;
+  background-color: whitesmoke;
+  border-radius: 6px;
   color: #586e75;
 }
 
 .highlight pre {
+  background-color: transparent;
   font-size: 0.875em;
   line-height: 1.375;
 }
@@ -11183,6 +11185,14 @@ svg {
   color: #fff;
 }
 
+.bd-post .table {
+  font-size: 1rem;
+}
+
+.bd-post .bd-anchor-title {
+  margin-top: 0 !important;
+}
+
 .bd-has-drawing {
   position: relative;
 }
@@ -11255,6 +11265,15 @@ svg {
 
 .bd-link:hover {
   background-color: #fafafa;
+}
+
+.bd-link-surtitle {
+  float: right;
+  font-size: 0.75em;
+  margin-bottom: 1em;
+  margin-left: 2em;
+  opacity: 0.5;
+  padding-top: 0.25em;
 }
 
 .bd-link-name {
@@ -11667,6 +11686,7 @@ svg {
 
 .bd-snippet-code {
   background-color: whitesmoke;
+  border-radius: 6px;
 }
 
 .bd-snippet-code.bd-is-more.bd-is-more-clipped .highlight {
