--- a/docs/_sass/example.sass
+++ b/docs/_sass/example.sass
@@ -59,6 +59,7 @@
 
 .bd-snippet-code
   background-color: $pre-background
+  border-radius: $radius-large
 
 .bd-snippet-code.bd-is-more.bd-is-more-clipped
   .highlight
