--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -2,6 +2,12 @@
   background-color: $primary
   color: $primary-invert
 
+.bd-post
+  .table
+    font-size: 1rem
+  .bd-anchor-title
+    margin-top: 0 !important
+
 .bd-has-drawing
   position: relative
 
@@ -51,6 +57,14 @@
     font-weight: $weight-semibold
   &:hover
     background-color: $white-bis
+
+.bd-link-surtitle
+  float: right
+  font-size: 0.75em
+  margin-bottom: 1em
+  margin-left: 2em
+  opacity: 0.5
+  padding-top: 0.25em
 
 .bd-link-name
   line-height: 1.25
