--- a/docs/_sass/example.sass
+++ b/docs/_sass/example.sass
@@ -57,10 +57,6 @@
 .bd-snippet-preview
   padding: 1.5rem
 
-.bd-snippet-code
-  background-color: $pre-background
-  border-radius: $radius-large
-
 .bd-snippet-code.bd-is-more.bd-is-more-clipped
   .highlight
     height: 2em
@@ -73,10 +69,14 @@
 .bd-snippet.bd-is-horizontal
   border-radius: $radius-large
   border-top-left-radius: 0
-  .bd-snippet-code.bd-is-more.bd-is-more-clipped
+  .bd-snippet-code
     .highlight
-      pre
-        padding-top: 0.325rem
+      border-top-left-radius: 0
+      border-top-right-radius: 0
+    &.bd-is-more.bd-is-more-clipped
+      .highlight
+        pre
+          padding-top: 0.325rem
 
 .bd-snippet.bd-is-clipped
   .bd-snippet-code
