--- a/docs/_sass/index.sass
+++ b/docs/_sass/index.sass
@@ -257,7 +257,7 @@
 
 .intro-npm
   background: $black-ter
-  border-radius: $radius-large
+  border-radius: $radius
   color: $white
   display: flex
   font-size: 15px
