--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -10642,7 +10642,7 @@ svg {
 
 .intro-npm {
   background: #242424;
-  border-radius: 6px;
+  border-radius: 4px;
   color: white;
   display: flex;
   font-size: 15px;
@@ -11684,11 +11684,6 @@ svg {
   padding: 1.5rem;
 }
 
-.bd-snippet-code {
-  background-color: whitesmoke;
-  border-radius: 6px;
-}
-
 .bd-snippet-code.bd-is-more.bd-is-more-clipped .highlight {
   height: 2em;
   overflow: hidden;
@@ -11705,6 +11700,11 @@ svg {
 .bd-snippet.bd-is-horizontal {
   border-radius: 6px;
   border-top-left-radius: 0;
+}
+
+.bd-snippet.bd-is-horizontal .bd-snippet-code .highlight {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 
 .bd-snippet.bd-is-horizontal .bd-snippet-code.bd-is-more.bd-is-more-clipped .highlight pre {
