--- a/docs/documentation/layout/section.html
+++ b/docs/documentation/layout/section.html
@@ -34,7 +34,7 @@ doc-subtab: section
 {% endhighlight %}
 
     <div class="content">
-      <p>You can use the modifiers <code>is-medium</code> and <code>is-large</code> to change the <strong>spacing</strong>.</p>
+      <p>You can use the modifiers <code>is-small</code>, <code>is-medium</code> and <code>is-large</code> to change the <strong>spacing</strong>.</p>
     </div>
 
     {% include variables.html %}
